Making this a self-contained demo app.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="OfflineData/*"
 exclude_filter=""
 export_path="./PM GD Client Test.apk"
 encryption_include_filters=""
@@ -22,7 +22,6 @@ gradle_build/use_gradle_build=true
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
-plugins/GodotAndroidGpsProvider=true
 architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
@@ -35,14 +34,14 @@ package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
+package/show_in_android_tv=false
+package/show_in_app_library=true
+package/show_as_launcher_app=false
 launcher_icons/main_192x192=""
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 graphics/opengl_debug=false
 xr_features/xr_mode=0
-xr_features/hand_tracking=0
-xr_features/hand_tracking_frequency=0
-xr_features/passthrough=0
 screen/immersive_mode=true
 screen/support_small=true
 screen/support_normal=true
@@ -200,9 +199,10 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
-package/show_in_android_tv=false
-package/show_in_app_library=true
-package/show_as_launcher_app=false
+plugins/GodotAndroidGpsProvider=true
+xr_features/hand_tracking=0
+xr_features/hand_tracking_frequency=0
+xr_features/passthrough=0
 dotnet/include_scripts_content=false
 dotnet/include_debug_symbols=true
 dotnet/embed_build_outputs=false
