--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="OfflineData/*"
 exclude_filter=""
-export_path="./PM GD Client Test.apk"
+export_path="../PraxisMapper Godot Library Demos.apk"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -29,7 +29,7 @@ architectures/x86_64=false
 version/code=1
 version/name=""
 package/unique_name="org.praxismapper.gdtest"
-package/name=""
+package/name="PraxisMapper Demos"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
