--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -233,7 +233,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../PGCExport/PraxisGodotComponents.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
