--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="OfflineData/*"
 exclude_filter=""
-export_path="../PraxisMapper Godot Library Demos v2.3.apk"
+export_path="../PraxisMapper Godot Library Demos v2.4.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -29,6 +29,7 @@ gradle_build/compress_native_libraries=false
 gradle_build/export_format=0
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
+gradle_build/custom_theme_attributes={}
 architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
@@ -49,13 +50,16 @@ launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 launcher_icons/adaptive_monochrome_432x432=""
 graphics/opengl_debug=false
+shader_baker/enabled=false
 xr_features/xr_mode=0
 gesture/swipe_to_dismiss=false
 screen/immersive_mode=true
+screen/edge_to_edge=false
 screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
+screen/background_color=Color(0, 0, 0, 1)
 user_data_backup/allow=false
 command_line/extra_args=""
 apk_expansion/enable=false
@@ -233,7 +237,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../PGCExport/PraxisGodotComponents.html"
+export_path="D:/gpswebexported/index.html"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -256,7 +260,7 @@ html/head_include=""
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=false
-progressive_web_app/enabled=false
+progressive_web_app/enabled=true
 progressive_web_app/ensure_cross_origin_isolation_headers=true
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
@@ -265,3 +269,5 @@ progressive_web_app/icon_144x144=""
 progressive_web_app/icon_180x180=""
 progressive_web_app/icon_512x512=""
 progressive_web_app/background_color=Color(0, 0, 0, 1)
+threads/emscripten_pool_size=8
+threads/godot_pool_size=4
