--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,14 +3,18 @@
 name="Android"
 platform="Android"
 runnable=true
-advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="OfflineData/*"
 exclude_filter=""
-export_path="../PraxisMapper Godot Library Demos v2.4.apk"
+export_path="../PraxisMapper Godot Library Demos v2.5.apk"
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
@@ -34,7 +38,7 @@ architectures/armeabi-v7a=false
 architectures/arm64-v8a=true
 architectures/x86=false
 architectures/x86_64=false
-version/code=3
+version/code=4
 version/name=""
 package/unique_name="org.praxismapper.gdtest"
 package/name="PraxisMapper Demos"
@@ -140,6 +144,7 @@ permissions/manage_accounts=false
 permissions/manage_app_tokens=false
 permissions/manage_documents=false
 permissions/manage_external_storage=false
+permissions/manage_media=false
 permissions/master_clear=false
 permissions/media_content_control=false
 permissions/modify_audio_settings=false
@@ -231,7 +236,6 @@ dotnet/embed_build_outputs=false
 name="Web"
 platform="Web"
 runnable=true
-advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -239,6 +243,11 @@ include_filter=""
 exclude_filter=""
 export_path="D:/gpswebexported/index.html"
 patches=PackedStringArray()
+patch_delta_encoding=false
+patch_delta_compression_level_zstd=19
+patch_delta_min_reduction=0.1
+patch_delta_include_filters="*"
+patch_delta_exclude_filters=""
 encryption_include_filters=""
 encryption_exclude_filters=""
 seed=0
